Замена asList на метод of